--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -385,13 +385,14 @@
                     app:layout_constraintTop_toTopOf="@id/btn_select_all"
                     tools:text="3분" />
 
-                <include
-                    android:id="@+id/layout_music"
-                    layout="@layout/item_music_horizontal"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_song_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    app:layout_constraintTop_toBottomOf="@id/btn_select_all" />
+                    app:layout_constraintTop_toBottomOf="@id/btn_select_all"
+                    tools:itemCount="1"
+                    tools:listitem="@layout/item_music_horizontal" />
 
                 <!-- 앨범 소개 -->
                 <TextView
@@ -404,7 +405,7 @@
                     android:textColor="@color/gray_300"
                     android:textSize="20sp"
                     app:layout_constraintStart_toStartOf="@id/gl_start"
-                    app:layout_constraintTop_toBottomOf="@id/layout_music" />
+                    app:layout_constraintTop_toBottomOf="@id/rv_song_list" />
 
                 <TextView
                     android:id="@+id/tv_type_label"
