[FEAT] Home 최신음악 서버 연동

--- a/app/src/main/res/layout/item_recent_music_sample_list.xml
+++ b/app/src/main/res/layout/item_recent_music_sample_list.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="recentMusicData"
-            type="org.sopt.jointseminar.melon.data.entity.music.ResponseRecentMusic" />
+            type="org.sopt.jointseminar.melon.data.entity.music.ResponseRecentMusic.Data" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
