[MOD] 데이터 클래스명 수정

--- a/app/src/main/res/layout/item_recommended_music_sample_list.xml
+++ b/app/src/main/res/layout/item_recommended_music_sample_list.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="favouriteData"
-            type="org.sopt.jointseminar.melon.data.entity.music.ResponseHomeFavourite.Data" />
+            type="org.sopt.jointseminar.melon.data.entity.music.ResponseHomeFavouriteData.Data" />
     </data>
 
 
