[MOD] TopMusicInfo 패키지 이동

--- a/app/src/main/res/layout/item_top_music.xml
+++ b/app/src/main/res/layout/item_top_music.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="topMusicInfo"
-            type="org.sopt.jointseminar.melon.data.entity.posting.TopMusicInfo" />
+            type="org.sopt.jointseminar.melon.data.entity.music.TopMusicInfo" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
